--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
 		"novutec/DomainParser": "dev-master as 2.0.0",
 		"novutec/WhoisParser": "dev-master as 3.1.0",
 		"pear/net_dns2": "dev-trunk",
-		"themattharris/tmhOAuth": "0.8.1"
+		"themattharris/tmhOAuth": "0.8.1",
+		"monolog/monolog": "^1.22",
+		"graylog2/gelf-php": "^1.5"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.21"
